--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,20 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  
+  /* Variables de polices */
+  --font-roboto: var(--font-roboto);
+  --font-montserrat: var(--font-montserrat);
+  --font-lato: var(--font-lato);
+  --font-oswald: var(--font-oswald);
+  --font-raleway: var(--font-raleway);
+  --font-merriweather: var(--font-merriweather);
+  --font-playfair: var(--font-playfair);
+  --font-poppins: var(--font-poppins);
+  --font-nunito: var(--font-nunito);
+  --font-quicksand: var(--font-quicksand);
+  --font-ubuntu: var(--font-ubuntu);
+  --font-fira-sans: var(--font-fira-sans);
 }
 
 @theme inline {
@@ -22,5 +36,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto), Arial, Helvetica, sans-serif;
 }
